--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>&copy; YelpCamp 2024 - Femi Akinlotan | Sample Project </p>
+            <p>&copy; YelpCamp 2024 | Femi Akinlotan | Sample Project </p>
         </footer>
 
 
